--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -23,7 +23,7 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?selectableItemBackground"
-            app:cardBackgroundColor="@color/colorNoteDefaultColor"
+            app:cardColor="@{model.color}"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +41,7 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:visibility="gone"
+                    app:imageSrc="@{model.imgPath}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -56,9 +57,10 @@
                     android:includeFontPadding="false"
                     android:maxLines="2"
                     android:text="@{model.title}"
-                    android:textColor="?android:attr/textColorPrimary"
+                    android:textColor="@color/colorText"
                     android:textSize="16dp"
                     android:textStyle="bold"
+                    app:textColor="@{model.color}"
                     app:layout_constraintEnd_toStartOf="@+id/img_check"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageNote"
@@ -74,8 +76,9 @@
                     android:ellipsize="end"
                     android:includeFontPadding="false"
                     android:maxLines="3"
+                    android:textColor="@color/colorText"
                     android:text="@{model.subtitle}"
-                    android:textColor="@color/colorNoteSubtitleText"
+                    app:textColor="@{model.color}"
                     android:textSize="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -91,9 +94,10 @@
                     android:layout_marginBottom="8dp"
                     android:animateLayoutChanges="true"
                     android:includeFontPadding="false"
-                    android:text=""
-                    android:textColor="@color/colorNoteSubtitleText"
+                    android:textColor="@color/colorText"
+                    app:textColor="@{model.color}"
                     android:textSize="12dp"
+                    app:dateSplit="@{model.dateTime}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtSubtitle"
@@ -120,8 +124,9 @@
                     android:background="@drawable/background_note_label"
                     android:ellipsize="end"
                     android:singleLine="true"
+                    android:textColor="@color/colorText"
                     android:text="@{model.label}"
-                    android:textColor="?android:attr/textColorPrimary"
+                    app:textColor="@{model.color}"
                     android:textSize="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/txtDateTime"
