--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -56,7 +56,7 @@
                 android:importantForAutofill="no"
                 android:includeFontPadding="false"
                 android:inputType="text"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorText"
                 android:textColorHint="@color/colorTextHint"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -172,7 +172,7 @@
                 android:includeFontPadding="false"
                 android:inputType="textMultiLine"
                 android:minHeight="100dp"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorText"
                 android:textColorHint="@color/colorTextHint"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
