--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="20dp"
         android:includeFontPadding="false"
         android:text="My Notes"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
