--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="model"
             type="com.chs.readytonote.entities.Note" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,12 +26,12 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?selectableItemBackground"
-            app:cardColor="@{model.color}"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:setCardColor="@{model.color}">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -60,10 +63,10 @@
                     android:textColor="@color/colorText"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    app:textColor="@{model.color}"
                     app:layout_constraintEnd_toStartOf="@+id/img_check"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageNote"
+                    app:textColor="@{model.color}"
                     tools:text="LoremIpsum" />
 
                 <TextView
@@ -76,13 +79,13 @@
                     android:ellipsize="end"
                     android:includeFontPadding="false"
                     android:maxLines="3"
-                    android:textColor="@color/colorText"
                     android:text="@{model.subtitle}"
-                    app:textColor="@{model.color}"
+                    android:textColor="@color/colorText"
                     android:textSize="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtTitle"
+                    app:textColor="@{model.color}"
                     tools:text="LoremIpsum" />
 
                 <TextView
@@ -95,12 +98,12 @@
                     android:animateLayoutChanges="true"
                     android:includeFontPadding="false"
                     android:textColor="@color/colorText"
-                    app:textColor="@{model.color}"
                     android:textSize="12dp"
                     app:dateSplit="@{model.dateTime}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtSubtitle"
+                    app:textColor="@{model.color}"
                     tools:text="2020/11/30" />
 
                 <ImageView
@@ -121,18 +124,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@drawable/background_note_label"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:textColor="@color/colorText"
                     android:text="@{model.label}"
-                    app:textColor="@{model.color}"
+                    android:textColor="@color/colorText"
                     android:textSize="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/txtDateTime"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/txtSubtitle"
                     app:layout_constraintTop_toBottomOf="@+id/txtSubtitle"
+                    app:textColor="@{model.color}"
+                    app:labelColor="@{model.color}"
                     tools:text="Note" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
