--- a/app/src/main/res/layout/item_note_empty.xml
+++ b/app/src/main/res/layout/item_note_empty.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
         android:text="새로운 노트 작성을 기다리고 있어요!"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
