--- a/app/src/main/res/layout/layout_decorations.xml
+++ b/app/src/main/res/layout/layout_decorations.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:includeFontPadding="false"
         android:text="Decoration"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorText"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
