--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,23 +15,4 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
-<!--    <com.google.android.material.bottomappbar.BottomAppBar-->
-<!--        android:id="@+id/bottomAppBar"-->
-<!--        style="@style/Widget.MaterialComponents.BottomAppBar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom"-->
-<!--        app:backgroundTint="@color/colorQuickActionBackground"-->
-<!--        app:fabAlignmentMode="center"-->
-<!--        app:fabCradleMargin="8dp" />-->
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/imgAddNoteMain"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:src="@drawable/ic_add"-->
-<!--        app:backgroundTint="@color/colorAccent"-->
-<!--        app:fabSize="normal"-->
-<!--        app:layout_anchor="@id/bottomAppBar" />-->
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
