--- a/app/src/main/res/layout/layout_decorations.xml
+++ b/app/src/main/res/layout/layout_decorations.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textMiscellaneous">
 
         <RadioButton
+            android:id="@+id/rdo_note_default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -43,6 +44,7 @@
             android:buttonTint="@color/colorBlack" />
 
         <RadioButton
+            android:id="@+id/rdo_note_yellow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="24dp"
@@ -51,6 +53,7 @@
             android:buttonTint="@color/colorBlack" />
 
         <RadioButton
+            android:id="@+id/rdo_note_red"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="24dp"
@@ -59,6 +62,7 @@
             android:buttonTint="@color/colorBlack" />
 
         <RadioButton
+            android:id="@+id/rdo_note_blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="24dp"
@@ -67,6 +71,7 @@
             android:buttonTint="@color/colorBlack" />
 
         <RadioButton
+            android:id="@+id/rdo_note_purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
