add delete Note feat. (#2)

--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -113,8 +113,7 @@
                     android:background="@drawable/background_subtitle_indicator"
                     app:layout_constraintBottom_toBottomOf="@+id/inputNoteSubtitle"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/inputNoteSubtitle"
-                    app:setIndicatorColor="@{model.color}" />
+                    app:layout_constraintTop_toTopOf="@+id/inputNoteSubtitle" />
 
                 <ImageView
                     android:id="@+id/imageNote"
