--- a/app/src/main/res/layout/layout_add_url.xml
+++ b/app/src/main/res/layout/layout_add_url.xml
@@ -16,7 +16,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_web_link"
-        app:tint="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="AddURL"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorIcons"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageAddUrl"
