--- a/app/src/main/res/layout/layout_delete_note.xml
+++ b/app/src/main/res/layout/layout_delete_note.xml
@@ -15,10 +15,9 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_delete"
-        app:tint="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Delete Note"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorIcons"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imgDeleteNote"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,15 +36,14 @@
 
     <TextView
         android:id="@+id/txtDeleteNoteMsg"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical"
-        android:paddingStart="12dp"
-        android:paddingEnd="8dp"
         android:text="노트를 삭제하시겠습니까?"
+        android:textColor="@color/colorIcons"
         android:textSize="13sp"
-        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/imgDeleteNote"
         app:layout_constraintTop_toBottomOf="@+id/imgDeleteNote" />
 
@@ -55,13 +53,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:padding="8dp"
         android:text="DELETE NOTE"
         android:textColor="@color/colorDelete"
         android:textSize="13sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textDeleteCancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDeleteNoteMsg" />
 
@@ -71,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:padding="8dp"
         android:text="CANCEL"
         android:textColor="@color/colorAccent"
