--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="model"
             type="com.chs.readytonote.entities.Note" />
@@ -44,6 +43,8 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:visibility="gone"
+                    tools:src="@tools:sample/avatars"
+                    tools:visibility="visible"
                     app:imageSrc="@{model.imgPath}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +64,7 @@
                     android:textColor="@color/colorText"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/img_check"
+                    app:layout_constraintEnd_toStartOf="@+id/btn_check"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageNote"
                     app:textColor="@{model.color}"
@@ -107,17 +108,19 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="2020/11/30" />
 
-                <ImageView
-                    android:id="@+id/img_check"
+                <CheckBox
+                    android:id="@+id/btn_check"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
                     android:layout_marginEnd="8dp"
-                    android:animateLayoutChanges="true"
-                    android:background="@drawable/background_note_select"
                     android:visibility="gone"
+                    tools:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/txtTitle" />
+                    app:layout_constraintTop_toTopOf="@+id/txtTitle"
+                    />
 
                 <TextView
                     android:id="@+id/txtLabel"
