--- a/app/src/main/res/layout/layout_add_url.xml
+++ b/app/src/main/res/layout/layout_add_url.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="AddURL"
+        android:text="ADD URL"
         android:textColor="@color/colorIcons"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:inputType="textUri"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorText"
         android:textColorHint="@color/colorTextHint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
