--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -116,7 +116,8 @@
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:layout_marginEnd="8dp"
-                    android:visibility="@{model.showSelected ? View.VISIBLE : View.GONE}"
+                    android:visibility="gone"
+                    android:buttonTint="@color/colorText"
                     app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/txtTitle"
